--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 		<version.failsafe.plugin>2.21.0</version.failsafe.plugin>
 	</properties>
 
+
+
 	<!-- gz1 14.03.2019 -->
 	<!-- prime faces -->
 	<repositories>
@@ -120,7 +122,7 @@
 		<!-- <dependency> <groupId>com.itextpdf</groupId> <artifactId>itext7-core</artifactId> 
 			<version>7.0.4</version> <type>pom</type> </dependency> -->
 
-		
+
 
 		<dependency>
 			<groupId>javax.jms</groupId>
@@ -275,16 +277,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.10.3</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<phase>package</phase>
-						<goals>
-							<goal>javadoc</goal>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
+				<configuration>
+					<sourcepath>src/main/java</sourcepath>
+
+				</configuration>
+
+				<!-- <executions> <execution> <id>attach-javadocs</id> <phase>package</phase> 
+					<goals> <goal>javadoc</goal> <goal>jar</goal> </goals> </execution> </executions> -->
 			</plugin>
 
 			<plugin>
